# Literature-search

./: .gitignore
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/src/biomed_multi_agent/: api.py  config.py  graph.py  llm.py  pipeline.py  prompts.py  schemas.py  state.py
backend/src/biomed_multi_agent/agents/: citation_agent.py  conflict_agent.py  critique_agent.py  extraction_agent.py  methods_agent.py  planner.py  search_agent.py  synthesis_agent.py
backend/src/biomed_multi_agent/tools/: io_utils.py  ncbi.py
backend/tests/: test_imports.py
frontend/: README.md  config.js  index.html
